Start of DB stuff

--- a/AxoManager/AxoManager.csproj
+++ b/AxoManager/AxoManager.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="_Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SQLite" Version="5.0.2" />
+  </ItemGroup>
+
 </Project>
